:bug: fix text not being truncated with an ellipsis in the interactions panel

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/interactions.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/interactions.scss
@@ -47,8 +47,6 @@
         }
       }
     }
-
-
   }
   .element-set {
     @include flexColumn;
@@ -65,11 +63,14 @@
 
 .interactions-info {
   flex-grow: 1;
+  display: grid;
+
   .trigger-name {
     color: var(--color-foreground-primary);
   }
   .action-summary {
     color: var(--color-foreground-secondary);
+    @include textEllipsis;
   }
 }
 
@@ -215,7 +216,6 @@
         }
       }
     }
-
 
     .remove-btn {
       @extend .button-tertiary;
